fixed annoying css card spacing

--- a/src/App.less
+++ b/src/App.less
@@ -4,26 +4,29 @@ h1 {
   font-weight: bold;
   color: #40a9ff;
   font-size: 24px;
-  margin: 4px;
+  margin: 4px 0px;
 }
 
 h2 {
   font-weight: bold;
   color: #262626;
   font-size: 20px;
-  margin: 4px;
 }
 
 h3 {
   font-weight: normal;
-  color: #585858;
+  color: #595959;
   font-size: 12px;
-  margin: 4px;
+  margin: 0px 4px 0px 0px;
+}
+
+.ant-card {
+  line-height: 1;
 }
 
 p {
   font-weight: normal;
   color: #262626;
   font-size: 12px;
-  margin: 4px;
+  margin: 0px 4px;
 }
