--- a/src/components/components.css
+++ b/src/components/components.css
@@ -19,4 +19,5 @@
 .Icon {
   width: 14px;
   height: 14px;
+  margin-right: 4px;
 }
