--- a/src/pages/help/Help.css
+++ b/src/pages/help/Help.css
@@ -2,3 +2,7 @@
   display: flex;
   align-items: center;
 }
+
+.HelpPage {
+  background-color: #bae7ff;
+}
